// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppLayout renders without props 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
</div>
`;

exports[`renders <AppLayout/> with one child 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
  <div>
    Child 1
  </div>
</div>
`;

exports[`renders <AppLayout/> with two children 1`] = `
<div
  className="app-layout"
>
  <HeaderNav />
  <div>
    Child 1
  </div>
  <div>
    <span>
      Child 2
    </span>
    <p>
      Child 2
    </p>
  </div>
</div>
`;
